build(pods): update `Podfile` and change pod dependency 'Texture' from defaults to 'Texture/Core'

--- a/Example/Podfile
+++ b/Example/Podfile
@@ -12,7 +12,7 @@ target 'NodeExtension_Example' do
         
         pod 'Quick'
         pod 'Nimble'
-        pod 'FBSnapshotTestCase'
-        pod 'Nimble-Snapshots'
+#        pod 'FBSnapshotTestCase'
+#        pod 'Nimble-Snapshots'
     end
 end
